# backend/build/swagger.json
@@ -60,6 +60,28 @@
 			"TodoPutParams": {
 				"$ref": "#/components/schemas/Partial_TodoPostParams_"
 			},
+			"Pick_AddTaskParams.Exclude_keyofAddTaskParams.todoId__": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"note": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"title"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_AddTaskParams.todoId_": {
+				"$ref": "#/components/schemas/Pick_AddTaskParams.Exclude_keyofAddTaskParams.todoId__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"TaskPostParams": {
+				"$ref": "#/components/schemas/Omit_AddTaskParams.todoId_"
+			},
 			"User": {
 				"properties": {
 					"name": {
@@ -237,6 +259,49 @@
 						}
 					}
 				]
+			}
+		},
+		"/todo/{todoId}/task": {
+			"post": {
+				"operationId": "AddTask",
+				"responses": {
+					"200": {
+						"description": "登録したタスク",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"description": "タスクの登録",
+				"summary": "指定のToDoにタスクを登録する",
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "todoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TaskPostParams"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/users": {
